--- a/jobs/project.yaml
+++ b/jobs/project.yaml
@@ -3,23 +3,7 @@
     name: 'jobs_uploader'
     jobs:
       - jobs_uploader
-
-- project:
-    name: 'jobs_runner'
-    jobs:
       - jobs_runner
-
-- project:
-    name: 'ui_tests'
-    jobs:
-      - ui_tests
-
-- project:
-    name: 'api_tests'
-    jobs:
       - api_tests
-
-- project:
-    name: 'mobile_tests'
-    jobs:
-      - mobile_tests
+#      - ui_tests
+#      - mobile_test
