--- a/macroses/jobs_runner_macros.yaml
+++ b/macroses/jobs_runner_macros.yaml
@@ -3,8 +3,8 @@
     name: runner_scm
     scm:
       - git:
-          url: https://github.com/vapolonov/jenkins_config.git
+          url: https://github.com/vapolonov/jenkins_conf.git
           credentials-id: jenkins
           branches:
             - FETCH_HEAD
-          refspec: main
+          refspec: ${REFSPEC}
